--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@ margin-right: 100px;
   background: #ffffff;
   border-radius: 30px;
   font-size: 20px;
-  line-height: 27px;
   color: #6c63ff;
   border: none;
   margin-top: 15px;
@@ -71,7 +70,7 @@ margin-right: 100px;
   font-style: normal;
   font-weight: 600;
   font-size: 43px;
-  line-height: 75px;
+  line-height: 70px;
   color: #2b044d;
   max-width: 520px;
   margin-left: 200px;
@@ -139,6 +138,9 @@ margin-right: 100px;
   width: 260px;
   height: 80px;
   color: #6c63ff;
+      border-bottom: 2px solid;
+  color: #386efe;
+  border-color: #386efe;
 }
 .hide {
   display: none;
@@ -158,8 +160,6 @@ margin-right: 100px;
     height: 55px;
   margin-right: 75px;
   margin-left: 75px;
-  text-align: center;
-    padding-top: 7px;
   cursor: pointer;
 }
 .tabs-content {
@@ -487,11 +487,6 @@ font-weight: 300;
   justify-content: center;
   align-items: center;
 }
-.active {
-  border-bottom: 2px solid;
-  color: #386efe;
-  border-color: #386efe;
-}
 .time-section {
   display: flex;
   flex-direction: column;
@@ -621,7 +616,7 @@ font-weight: 300;
     .subheading{
         margin-left: 220px;
         font-size: 34px;
-        margin-bottom: 80px;
+        margin-bottom: 70px;
     }
     .heading{
         margin-left: 220px;
@@ -784,7 +779,6 @@ margin-left: 200px;
   max-width: 800px;
   font-weight: 600;
   font-size: 40px;
-  line-height: 75px;
   color: #ffffff;
   display: flex;
   justify-content: center;
@@ -795,7 +789,6 @@ margin-left: 200px;
   margin-left: 75px;
   text-align: center;
   cursor: pointer;
-    padding-bottom: 20px;
 }
 .tabs-content {
   display: flex;
@@ -817,7 +810,11 @@ margin-left: 200px;
   align-items: center;
   position: relative;
 }
-
+        .tabs-button{
+            width: 220px;
+            height: 50px;
+            font-size: 33px;
+        }
 .content-header {
   font-weight: 600;
   font-size: 42px;
@@ -840,7 +837,7 @@ margin-left: 200px;
   color: #000000;
 }
         .tarif{
-            height: 850px;
+            height: 870px;
         }
         .instagram {
   width: 100%;
@@ -1085,7 +1082,6 @@ margin-left: 200px;
   max-width: 800px;
   font-weight: 600;
   font-size: 40px;
-  line-height: 75px;
   color: #ffffff;
   display: flex;
   justify-content: center;
@@ -1095,7 +1091,6 @@ margin-left: 200px;
   margin-right: 75px;
   margin-left: 75px;
   text-align: center;
-    padding-bottom: 25px;
   cursor: pointer;
 }
 .tabs-content {
@@ -1182,5 +1177,887 @@ margin-left: 200px;
     flex-direction: column;
     height: 100%;
     align-items: flex-end;
+}
+    
+}
+
+@media (max-width: 1100px) {
+    .item-link{
+        font-size: 15px;
+  margin-right: 30px;
+    }
+    .first-body {
+  height: 600px;
+
+  padding-top: 1px;
+}
+    .main-nav{
+margin-right: 30px;
+}
+    .logo{
+        margin-left: 120px;
+        margin-right: 80px;
+    }
+
+    .header{
+        max-width: 1200px;
+    }
+    .register-button{
+        font-size: 15px;
+        width: 150px;
+        height: 35px;
+        margin-top: 17px;
+    }
+    .subheading{
+        margin-left: 170px;
+        font-size: 24px;
+        line-height: 35px;
+    }
+    .heading{
+        line-height: 50px;
+        margin-left: 170px;
+        font-size: 35px;
+        max-width: 470px;
+        margin-bottom: 10px;
+    }
+    .more-button{
+        margin-left: 170px;
+        width: 200px;
+        height: 50px;
+        font-size: 23px;
+    }
+    .first-illustration{
+        width: 430px;
+          top: 13px;
+  right: 80px;
+    }
+    .secondpart{
+        height: 400px;
+    }
+    .description{
+width: 750px;
+    }
+    .d-heading {
+
+  font-size: 30px;
+
+}
+.d-text {
+
+  font-size: 20px;
+  line-height: 35px;
+
+}
+.d-image {
+  width: 100%;
+  height: 95%;
+}
+    .thirdpart {
+  height: 730px;
+}
+.third-heading {
+  font-size: 40px;
+}
+.advantage-content {
+  width: 750px;
+}
+.smallimgs {
+  width: 45px;
+  height: 45px;
+  margin-top: 17px;
+  margin-left: 12px;
+}
+.textdiv {
+  margin-top: 73px;
+  margin-left: 12px;
+}
+.adv-header {
+  font-size: 16px;
+    line-height: 17px;
+}
+.adv-text {
+  font-size: 13px;
+  line-height: 23px;
+}
+    .contact{
+    height: 300px;
+        width: 1000px;
+    }
+    .plane {
+  width: 50%;
+}
+.contact-heading {
+  font-size: 38px;
+}
+    .i-phone{
+margin-left: 200px;
+    margin-right: 120px;
+}
+    .divushka{
+        height: 350px;
+    }
+.count {
+  font-size: 45px;
+}
+.units {
+  font-size: 2p0x;
+}
+.semi {
+  font-size: 30px;
+}
+.vyxod {
+  font-size: 30px;
+  margin-bottom: 6%;
+}
+    .bottom {
+  height: 300px;
+}
+.bottom-container {
+  padding-left: 150px;
+  
+}
+.btmlinks {
+  margin-bottom:30px;
+}
+.line {
+  height: 2px;
+}
+.DMA {
+  margin-top: 20px;
+  margin-left: 150px;
+  font-size: 25px;
+}
+    .salon-card {
+  width: 160px;
+  height: 250px;
+        padding-bottom: 20px;
+}
+    
+.swiper-slide {
+  text-align: center;
+  justify-content: center;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  z-index: 0;
+}
+.swiper-part {
+  height: 700px;
+}
+.screenshot {
+  font-size: 30px;
+  height: 150px
+}
+    .swiper-container {
+  height: 450px;
+  width: 750px;
+}
+    .iphone {
+  width: 189px;
+  height: 310px;
+  top: 43px;
+    left: 281px;
+}
+    .tarif{
+        height: 700px;
+}
+  .tabs {
+  max-width: 1000px;
+  font-weight: 600;
+  font-size: 20px;
+}
+    .active {
+  width: 120px;
+  height: 40px;
+}
+    .t-heading{
+        font-size: 30px;
+    }
+.tabs-button {
+  margin-right: 50px;
+  margin-left: 50px;
+  text-align: center;
+    padding-top: 1%;
+}
+.tabs-content {
+  margin-top: 40px;
+}
+.first-content{
+    margin-right: 50px;
+}
+.second-content{
+    margin-right: 50px;
+}
+.salons-content {
+  width: 250px;
+  height: 400px;
+}
+
+.content-header {
+  font-size: 30px;
+  line-height: 45px;
+  margin-top: 25px;
+  margin-bottom: 20px;
+}
+.content-list {
+  margin-left: 20px;
+}
+.tabs-item {
+  font-size: 15px;
+  line-height: 25px;
+  margin-bottom: 15px;
+}
+    .instagram {
+  height: 500px;
+}
+.i-phone{
+    height: 70%;
+margin-left: 100px;
+}
+.i-heading {
+  font-size: 40px;
+  line-height: 60px;
+    margin-bottom: 1px;
+}
+.i-text {
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 40px;
+  max-width: 630px;
+    margin-bottom: 50px;
+}
+.instagram-text{
+    width: 500px;
+    margin-right: 150px;
+    height: 100%;
+}
+    .subscribe-button {
+  width: 200px;
+  height: 50px;
+  font-size: 25px;
+}
+    .register-block {
+  height: 280px;
+}
+.register-heading {
+  font-size: 27px;
+  line-height: 52px;
+  max-width: 540px;
+  margin-bottom: 40px;
+}
+.register-btn {
+  width: 200px;
+  height: 50px;
+  font-weight: 300;
+  font-size: 25px;
+}
+    
+}
+@media (max-width: 970px){
+    .item-link{
+        font-size: 12px;
+  margin-right: 25px;
+    }
+    .item-link:after {
+  height: 1.5px;
+}
+    .first-body {
+  height: 480px;
+  padding-top: 0px;
+}
+    .main-nav{
+    margin-right: 50px;
+}
+    .logo{
+        margin-left: 100px;
+        margin-right: 50px;
+        margin-top: 30px;
+        font-size: 10px;
+    }
+
+    .header{
+        max-width: 1200px;
+    }
+    .register-button{
+        font-size: 12px;
+        width: 100px;
+        height: 25px;
+        margin-top: 20px;
+    }
+    .heading{
+        line-height: 43px;
+        margin-left: 145px;
+        font-size: 29px;
+        max-width: 380px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+    .subheading{
+        margin-bottom: 40px;
+        margin-left: 145px;
+        font-size: 20px;
+        line-height: 20px;
+    }
+    .more-button{
+        margin-left: 145px;
+        width: 170px;
+        height: 45px;
+        font-size: 19px;
+    }
+    .first-illustration{
+        width: 350px;
+          top: 13px;
+  right: 70px;
+    }
+    .secondpart{
+        height: 350px;
+    }
+    .description{
+width: 620px;
+    }
+    .d-heading {
+  font-size: 27px;
+}
+.d-text {
+  font-size: 18px;
+  line-height: 28px;
+}
+.d-image {
+  width: 100%;
+  height: 90%;
+}
+    .thirdpart {
+  height: 620px;
+}
+.third-heading {
+  font-size: 30px;
+}
+.advantage-content {
+  width: 620px;
+}
+.smallimgs {
+  width: 37px;
+  height: 37px;
+  margin-top: 15px;
+  margin-left: 10px;
+}
+.textdiv {
+  margin-top: 60px;
+  margin-left: 10px;
+}
+.adv-header {
+  font-size: 13px;
+    margin-bottom: 13px;
+}
+.adv-text {
+  font-size: 11px;
+  line-height: 18px;
+}
+    .contact{
+    height: 300px;
+        width: 1000px;
+    }
+    .plane {
+  width: 50%;
+}
+.contact-heading {
+  font-size: 38px;
+}
+    .i-phone{
+margin-left: 200px;
+    margin-right: 120px;
+}
+    .divushka{
+        height: 350px;
+    }
+.count {
+  font-size: 45px;
+}
+.units {
+  font-size: 2p0x;
+}
+.semi {
+  font-size: 30px;
+}
+.vyxod {
+  font-size: 30px;
+  margin-bottom: 6%;
+}
+    .bottom {
+  height: 300px;
+}
+.bottom-container {
+  padding-left: 150px;
+  
+}
+.btmlinks {
+  margin-bottom:30px;
+}
+.line {
+  height: 2px;
+}
+.DMA {
+  margin-top: 20px;
+  margin-left: 150px;
+  font-size: 25px;
+}
+    .salon-card {
+  width: 130px;
+  height: 200px;
+        margin-bottom: 25px;;
+}
+    
+.swiper-slide {
+  text-align: center;
+  justify-content: center;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  z-index: 0;
+}
+.swiper-part {
+  height: 600px;
+}
+    .swiper-pagination{
+        width: 10px;
+    }
+.screenshot {
+  font-size: 26px;
+  height: 100px
+}
+    .swiper-container {
+  height: 350px;
+  width: 620px;
+}
+    .iphone {
+  width: 150px;
+  height: 250px;
+  top: 33px;
+    left: 234px;
+}
+    .tarif{
+        height: 700px;
+}
+  .tabs {
+  max-width: 1000px;
+  font-weight: 600;
+  font-size: 20px;
+}
+    .active {
+  width: 100px;
+  height: 30px;
+}
+    .t-heading{
+        font-size: 27px;
+    }
+.tabs-button {
+    width: 150px;
+    height: 35px;
+  margin-right: 50px;
+  margin-left: 50px;
+  text-align: center;
+    cursor: pointer;
+}
+.tabs-content {
+  margin-top: 30px;
+}
+.first-content{
+    margin-right: 30px;
+}
+.second-content{
+    margin-right: 30px;
+}
+.salons-content {
+  width: 200px;
+  height: 330px;
+  border-radius: 20px;
+}
+
+.content-header {
+  font-size: 25px;
+  line-height: 45px;
+  margin-top: 25px;
+  margin-bottom: 15px;
+}
+.content-list {
+  margin-left: 5px;
+}
+.tabs-item {
+  font-size: 12px;
+  height: 10px;
+  margin-bottom: 10px;
+}
+    .instagram {
+  height: 500px;
+}
+.i-phone{
+    height: 70%;
+margin-left: 100px;
+}
+.i-heading {
+  font-size: 40px;
+  line-height: 60px;
+    margin-bottom: 1px;
+}
+.i-text {
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 40px;
+  max-width: 630px;
+    margin-bottom: 50px;
+}
+.instagram-text{
+    width: 500px;
+    margin-right: 150px;
+    height: 100%;
+}
+    .subscribe-button {
+  width: 200px;
+  height: 50px;
+  font-size: 25px;
+}
+    .register-block {
+  height: 280px;
+}
+.register-heading {
+  font-size: 27px;
+  line-height: 52px;
+  max-width: 540px;
+  margin-bottom: 40px;
+}
+.register-btn {
+  width: 200px;
+  height: 50px;
+  font-weight: 300;
+  font-size: 25px;
+}
+ .tabs-item{background-image: url(../img/check.png);
+background-repeat: no-repeat;
+background-size: 20px 20px;
+background-position:left 0px;
+    list-style-image: none;
+     list-style: none;
+    }
+}
+@media(min-width: 1800px){
+        .item-link{
+        font-size: 30px;
+  margin-right: 50px;
+    }
+    .first-body {
+  height: 1000px;
+
+  padding-top: 25px;
+}
+    .logo{
+        margin-right: 180px;
+    }
+
+    .header{
+        max-width: 1450px;
+    }
+    .register-button{
+        font-size: 30px;
+        width: 250px;
+        height: 60px;
+        margin-top: 8px;
+        margin-left: 250px;
+    }
+    .subheading{
+        margin-left: 280px;
+        font-size: 40px;
+        margin-bottom: 100px;
+    }
+    .heading{
+        margin-left: 280px;
+        font-size: 55px;
+        max-width: 700px;
+        margin-top: 120px;
+        margin-bottom: 30px;
+        line-height: 90px;
+    }
+    .more-button{
+        margin-left: 280px;
+        width: 400px;
+        height: 100px;
+        border-radius: 70px;
+        font-size: 45px;
+    }
+    .first-illustration{
+        width: 800px;
+        margin-right: 50px;
+    }
+    .secondpart{
+        height: 800px;
+    }
+    .description{
+width: 1500px;
+    }
+    .d-heading {
+
+  font-size: 55px;
+
+}
+.d-text {
+
+  font-size: 42px;
+  line-height: 55px;
+
+}
+.d-image {
+  width: 100%;
+  height: 90%;
+}
+    .thirdpart {
+  height: 1500px;
+}
+.third-heading {
+
+  font-size: 60px;
+
+}
+.advantage-content {
+  width: 1500px;
+}
+.smallimgs {
+  width: 90px;
+  height: 90px;
+  margin-top: 30px;
+  margin-left: 20px;
+}
+.textdiv {
+  margin-top: 140px;
+  margin-left: 20px;
+}
+.adv-header {
+  font-size: 35px;
+    margin-bottom: 25px;
+}
+.adv-text {
+  font-size: 27px;
+  line-height: 45px;
+}
+    .first-content{
+    margin-right: 100px;
+}
+.second-content{
+    margin-right: 100px;
+}
+    .contact{
+    height: 500px;
+    }
+    .plane {
+  width: 50%;
+}
+.contact-heading {
+  font-size: 53px;
+}
+    .i-phone{
+margin-left: 200px;
+    margin-right: 120px;
+}
+    .divushka{
+        height: 550px;
+    }
+.count {
+  font-size: 65px;
+}
+.units {
+  font-size: 30px;
+}
+.semi {
+  font-size: 40px;
+}
+.vyxod {
+  font-size: 45px;
+  line-height: 60px;
+  margin-bottom: 6%;
+
+}
+    .bottom {
+  height: 450px;
+}
+.bottom-container {
+  padding-left: 300px;
+  
+}
+.btmlinks {
+  margin-bottom: 30px;
+  font-size: 30px;
+}
+.line {
+  height: 2px;
+}
+.DMA {
+  margin-top: 30px;
+  margin-left: 300px;
+  font-size: 35px;
+}
+    .salon-card {
+  width: 330px;
+  height: 550px;
+}
+    
+.swiper-slide {
+  text-align: center;
+  justify-content: center;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  z-index: 0;
+}
+.swiper-part {
+  height: 1300px;
+}
+.screenshot {
+  font-size: 50px;
+  height: 250px
+}
+    .swiper-container {
+  height: 850px;
+  width: 1500px;
+}
+    .iphone {
+  width: 380px;
+  height: 620px;
+  top: 80px;
+    left: 562px;
+    }.tarif{
+        height: 1100px;
+    }
+  .tabs {
+  z-index: 1;
+  max-width: 800px;
+  font-weight: 600;
+  font-size: 40px;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+    
+.tabs-button {
+  margin-right: 75px;
+  margin-left: 75px;
+  cursor: pointer;
+    width: 250px;
+        height: 70px;
+    padding-top: 15px;
+    font-size: 40px;
+}
+.tabs-content {
+  display: flex;
+  margin-top: 60px;
+    justify-content: center;
+}
+.first-content{
+    margin-right: 120px;
+}
+.second-content{
+    margin-right: 120px;
+}
+.salons-content {
+  border-radius: 35px;
+  width: 400px;
+  height: 650px;
+}
+.content-header {
+  font-size: 50px;
+  line-height: 60px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.content-list {
+  margin-left: 35px;
+  margin-top: 0;
+}
+.tabs-item {
+  list-style-image: url(../img/check.png);
+  font-weight: 300;
+  font-size: 27px;
+  line-height: 40px;
+  margin-bottom: 35px;
+}
+    .instagram {
+  height: 900px;
+}
+
+.i-phone{
+    height: 70%;
+margin-left: 200px;
+}
+.i-heading {
+  font-weight: bold;
+  font-size: 60px;
+  line-height: 70px;
+  text-align: right;
+  color: #ffffff;
+}
+.i-text {
+  font-size: 45px;
+  line-height: 70px;
+  text-align: right;
+  max-width: 950px;
+    margin-bottom: 80px;
+}
+.instagram-text{
+    width: 1000px;
+}
+    .active{
+        width: 250px;
+        height: 70px;
+    }
+    .subscribe-button{
+        width: 400px;
+        height: 90px;
+        font-size: 45px;
+    }
+    .t-heading{
+        font-size: 60px;
+        line-height: 150px;
+    }
+       .register-block {
+  height: 450px;
+}
+.register-heading {
+  font-size: 45px;
+  line-height: 75px;
+  max-width: 1000px;
+  margin-bottom: 40px;
+}
+.register-btn {
+  width: 400px;
+  height: 100px;
+  font-size: 50px;
 }
 }
