--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,10 @@ margin-right: 100px;
   z-index: 1;
     width: 520px;
 }
+.second-illustration {
+  position: absolute;
+  display: none;
+}
 .more-button {
   width: 256px;
   height: 65px;
@@ -161,6 +165,7 @@ margin-right: 100px;
   margin-right: 75px;
   margin-left: 75px;
   cursor: pointer;
+    text-align: center;
 }
 .tabs-content {
   display: flex;
@@ -206,6 +211,8 @@ margin-right: 100px;
 .wave {
   position: absolute;
   left: 0;
+    width: 55%;
+    height: 40%;
   bottom: 0;
 }
 .register-block {
@@ -238,7 +245,6 @@ margin-right: 100px;
 .contact {
   position: relative;
   height: 400px;
-  padding-right: 15%;
 }
 .plane {
   position: absolute;
@@ -248,11 +254,12 @@ margin-right: 100px;
   width: 50%;
 }
 .contact-heading {
+    position: absolute;
   font-weight: 600;
   font-size: 40px;
   color: #2b044d;
-    padding-top: 70px;
-    text-align: right;
+   top: 50px;
+    right: 100px;
 }
 .instagram {
   width: 100%;
@@ -449,7 +456,7 @@ font-weight: 300;
   align-items: center;
 }
 .bottom-container {
-  margin-top: 30px;
+  justify-content: center;
   padding-left: 250px;
   display: flex;
   flex-direction: column;
@@ -1287,7 +1294,9 @@ width: 750px;
   width: 50%;
 }
 .contact-heading {
-  font-size: 38px;
+    top: 30px;
+    right: 50px;
+  font-size: 35px;
 }
     .i-phone{
 margin-left: 200px;
@@ -1447,7 +1456,7 @@ margin-left: 100px;
   font-size: 25px;
 }
     .register-block {
-  height: 280px;
+  height: 300px;
 }
 .register-heading {
   font-size: 27px;
@@ -1499,11 +1508,11 @@ margin-left: 100px;
         margin-left: 145px;
         font-size: 29px;
         max-width: 380px;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
         margin-top: 20px;
     }
     .subheading{
-        margin-bottom: 40px;
+        margin-bottom: 50px;
         margin-left: 145px;
         font-size: 20px;
         line-height: 20px;
@@ -1564,52 +1573,56 @@ width: 620px;
   line-height: 18px;
 }
     .contact{
-    height: 300px;
-        width: 1000px;
+        width: 100%;
+    height: 250px;
     }
     .plane {
-  width: 50%;
+  width: 45%;
 }
 .contact-heading {
-  font-size: 38px;
+    top: 20px;
+    right: 100px;
+  font-size: 25px;
 }
     .i-phone{
 margin-left: 200px;
     margin-right: 120px;
 }
     .divushka{
-        height: 350px;
+        height: 300px;
     }
 .count {
-  font-size: 45px;
+  font-size: 30px;
 }
 .units {
-  font-size: 2p0x;
+  font-size: 15px;
 }
 .semi {
-  font-size: 30px;
+  font-size: 20px;
 }
 .vyxod {
-  font-size: 30px;
-  margin-bottom: 6%;
+  font-size: 25px;
+        margin-top: 60px;
+  margin-bottom: 5%;
 }
     .bottom {
-  height: 300px;
+  height: 230px;
 }
 .bottom-container {
-  padding-left: 150px;
+  padding-left: 130px;
   
 }
 .btmlinks {
-  margin-bottom:30px;
+  margin-bottom:20px;
+    font-size: 14px;
 }
 .line {
-  height: 2px;
+  height: 1.5px;
 }
 .DMA {
-  margin-top: 20px;
-  margin-left: 150px;
-  font-size: 25px;
+  margin-top: 15px;
+  margin-left: 130px;
+  font-size: 17px;
 }
     .salon-card {
   width: 130px;
@@ -1656,7 +1669,7 @@ margin-left: 200px;
     left: 234px;
 }
     .tarif{
-        height: 700px;
+        height: 550px;
 }
   .tabs {
   max-width: 1000px;
@@ -1669,6 +1682,7 @@ margin-left: 200px;
 }
     .t-heading{
         font-size: 27px;
+        padding-top: 25px;
     }
 .tabs-button {
     width: 150px;
@@ -1690,41 +1704,46 @@ margin-left: 200px;
 .salons-content {
   width: 200px;
   height: 330px;
-  border-radius: 20px;
+  border-radius: 15px;
 }
 
 .content-header {
   font-size: 25px;
   line-height: 45px;
   margin-top: 25px;
-  margin-bottom: 15px;
-}
-.content-list {
-  margin-left: 5px;
-}
-.tabs-item {
-  font-size: 12px;
-  height: 10px;
   margin-bottom: 10px;
 }
+.content-list {
+  margin-left: 1px;
+}
+.tabs-item {
+  font-size: 13px;
+    line-height: 18px;
+  margin-bottom: 15px;
+}
+    .tabs-item {
+  list-style-image: url(../img/check1.png);
+
+}
     .instagram {
-  height: 500px;
+  height: 420px;
 }
 .i-phone{
+    margin-right: 50px;
     height: 70%;
-margin-left: 100px;
+margin-left: 120px;
 }
 .i-heading {
-  font-size: 40px;
-  line-height: 60px;
+  font-size: 30px;
+  line-height: 50px;
     margin-bottom: 1px;
 }
 .i-text {
   font-weight: 600;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 40px;
-  max-width: 630px;
-    margin-bottom: 50px;
+  max-width: 370px;
+    margin-bottom: 30px;
 }
 .instagram-text{
     width: 500px;
@@ -1732,31 +1751,27 @@ margin-left: 100px;
     height: 100%;
 }
     .subscribe-button {
-  width: 200px;
-  height: 50px;
-  font-size: 25px;
+  width: 170px;
+  height: 40px;
+  font-size: 20px;
 }
     .register-block {
-  height: 280px;
+  height: 250px;
 }
 .register-heading {
-  font-size: 27px;
-  line-height: 52px;
-  max-width: 540px;
-  margin-bottom: 40px;
+  font-size: 23px;
+  line-height: 45px;
+  max-width: 500px;
+  margin-bottom: 20px;
 }
 .register-btn {
   width: 200px;
   height: 50px;
   font-weight: 300;
-  font-size: 25px;
+  font-size: 21;
 }
- .tabs-item{background-image: url(../img/check.png);
-background-repeat: no-repeat;
-background-size: 20px 20px;
-background-position:left 0px;
-    list-style-image: none;
-     list-style: none;
+    .background{
+        height: 300px;
     }
 }
 @media(min-width: 1800px){
@@ -2060,4 +2075,320 @@ margin-left: 200px;
   height: 100px;
   font-size: 50px;
 }
+}
+@media (max-width: 780px){
+    .item-link{
+        font-size: 10px;
+  margin-right: 25px;
+    }
+    .item-link:after {
+  height: 1.5px;
+}
+    .first-body {
+  height: 500px;
+  padding-top: 0px;
+}
+    .main-nav{
+    margin-right: 50px;
+        display: none;
+}
+    .logo{
+        margin-left: 65px;
+        margin-right: 50px;
+        margin-top: 30px;
+        font-size: 15px;
+    }
+
+    .header{
+        max-width: 1200px;
+    }
+    .register-button{
+        font-size: 12px;
+        width: 100px;
+        height: 25px;
+        margin-top: 20px;
+        display: none;
+    }
+    .heading{
+        line-height: 50px;
+        margin-left: 100px;
+        font-size: 50px;
+        max-width: 700px;
+        margin-bottom: 40px;
+        margin-top: 30px;
+    }
+    .subheading{
+        margin-bottom: 60px;
+        margin-left: 100px;
+        font-size: 25px;
+        line-height: 20px;
+    }
+    .more-button{
+        margin-left: 100px;
+        width: 170px;
+        height: 45px;
+        font-size: 19px;
+    }
+    .first-illustration{
+        display: none;
+    }
+    .second-illustration{
+        display: block;
+        top: 200px;
+        right: 70px;
+        width: 230px;
+    }
+    .secondpart{
+        height: 350px;
+    }
+    .description{
+width: 620px;
+    }
+    .d-heading {
+  font-size: 30px;
+}
+.d-text {
+  font-size: 20px;
+  line-height: 30px;
+}
+.d-image {
+  width: 100%;
+  height: 90%;
+}
+    .thirdpart {
+  height: 700px;
+}
+.third-heading {
+  font-size: 25px;
+}
+.advantage-content {
+  width: 620px;
+}
+   .advantages {
+  height: 75%;
+  width: 80%;
+}
+.central-block {
+  margin-top: 20%;
+}
+.right-one {
+  margin-left: 20%;
+} 
+.smallimgs {
+  width: 50px;
+  height: 50px;
+  margin-top: 13px;
+  margin-left: 12px;
+}
+.textdiv {
+  margin-top: 70px;
+  margin-left: 12px;
+}
+.adv-header {
+  font-size: 15px;
+    margin-bottom: 13px;
+}
+.adv-text {
+  font-size: 12.6px;
+  line-height: 20px;
+}
+    .contact{
+        width: 100%;
+    height: 250px;
+    }
+    .plane {
+  width:50%;
+}
+.contact-heading {
+    top: 20px;
+    right: 70px;
+  font-size: 25px;
+}
+    .i-phone{
+margin-left: 200px;
+    margin-right: 120px;
+}
+    .divushka{
+        height: 300px;
+    }
+.count {
+  font-size: 35px;
+}
+.units {
+  font-size: 17px;
+}
+.semi {
+  font-size: 25px;
+}
+.vyxod {
+  font-size: 25px;
+        margin-top: 60px;
+  margin-bottom: 5%;
+}
+    .bottom {
+  height: 250px;
+}
+.bottom-container {
+  padding-left: 130px;
+  
+}
+.btmlinks {
+  margin-bottom:20px;
+    font-size: 17px;
+}
+.line {
+  height: 1.5px;
+}
+.DMA {
+  margin-top: 15px;
+  margin-left: 130px;
+  font-size: 19px;
+}
+    .salon-card {
+  width: 160px;
+  height: 250px;
+        margin-bottom: 25px;;
+}
+    
+.swiper-slide {
+  text-align: center;
+  justify-content: center;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  z-index: 0;
+}
+.swiper-part {
+  height: 550px;
+}
+.screenshot {
+  font-size: 26px;
+  height: 100px
+}
+    .swiper-container {
+  height: 400px;
+  width: 650px;
+}
+    .iphone {
+  width: 188px;
+  height: 305px;
+  top: 31px;
+    left: 231px;
+}
+    .tarif{
+        height: 550px;
+}
+  .tabs {
+  max-width: 500px;
+  font-weight: 600;
+  font-size: 22px;
+}
+    .active {
+  width: 100px;
+  height: 30px;
+}
+    .t-heading{
+        font-size: 27px;
+        padding-top: 25px;
+        height: 60px;
+    }
+.tabs-button {
+    width: 150px;
+    height: 35px;
+  margin-right: 50px;
+  margin-left: 50px;
+  text-align: center;
+    cursor: pointer;
+}
+.tabs-content {
+  margin-top: 30px;
+}
+.first-content{
+    margin-right: 30px;
+}
+.second-content{
+    margin-right: 30px;
+}
+.salons-content {
+  width: 220px;
+  height: 350px;
+  border-radius: 15px;
+}
+
+.content-header {
+  font-size: 25px;
+  line-height: 45px;
+  margin-top: 25px;
+  margin-bottom: 15px;
+}
+.content-list {
+  margin-left: 1px;
+}
+.tabs-item {
+  font-size: 15px;
+    line-height: 18px;
+  margin-bottom: 17px;
+}
+    .tabs-item {
+  list-style-image: url(../img/check1.png);
+
+}
+    .instagram {
+  height: 450px;
+}
+.i-phone{
+    margin-right: 20px;
+    height: 70%;
+margin-left: 80px;
+}
+.i-heading {
+  font-size: 30px;
+  line-height: 40px;
+    margin-bottom: 1px;
+}
+.i-text {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 35px;
+  max-width: 370px;
+    margin-bottom: 30px;
+}
+.instagram-text{
+    width: 450px;
+    margin-right: 80px;
+    height: 100%;
+}
+    .subscribe-button {
+  width: 200px;
+  height: 50px;
+  font-size: 22px;
+}
+    .register-block {
+  height: 250px;
+}
+.register-heading {
+  font-size: 23px;
+  line-height: 45px;
+  max-width: 500px;
+  margin-bottom: 20px;
+}
+.register-btn {
+  width: 200px;
+  height: 50px;
+  font-weight: 300;
+  font-size: 21;
+}
+    .background{
+        height: 300px;
+    }
 }
