--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,124 @@ body {
 button{
     border: none;
 }
+.user-signup {
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 170, 255, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal__block {
+  width: 600px;
+  height: 600px;
+  background-color: #fff;
+  padding: 30px;
+  max-width: 600px;
+  margin: 30px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.modal-close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: transparent;
+  border-color: transparent;
+  font-size: 24px;
+  line-height: 24px;
+  cursor: pointer;
+}
+.tabs_items1 {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  width: 300px;
+  font-size: 16px;
+  top: 10px;
+}
+.tabs_item {
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  color: black;
+  font-size: 30px;
+  cursor: pointer;
+  border: none;
+  background-color: white;
+}
+.input-window {
+  width: 450px;
+  background-color: white;
+  border-radius: 25px;
+  height: 100%;
+  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.input {
+  width: 80%;
+  height: 10%;
+  background: #ffffff;
+  border: 1px solid black;
+  border-radius: 43px;
+  outline: none;
+  margin-bottom: 5%;
+  font-size: 17px;
+  padding-left: 5%;
+  z-index: 0;
+}
+.justdiv {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 5%;
+  margin-bottom: 3%;
+}
+.conditions {
+  margin-left: 10px;
+  width: 400px;
+  font-size: 17px;
+  color: #386efe;
+}
+.registerbtn {
+  width: 70%;
+  height: 10%;
+  border-radius: 18px;
+  background: #386efe;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+  font-size: 24px;
+  color: white;
+  border-color: #386efe;
+  margin-bottom: 10px;
+}
+.rstmaster {
+  width: 70%;
+  height: 10%;
+  border-radius: 18px;
+  background: #386efe;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+  font-size: 24px;
+  color: white;
+  border-color: #386efe;
+  margin-bottom: 10px;
+}
+.isactive {
+  border-bottom: 2px solid;
+  color: #386efe;
+  border-color: #386efe;
+}
 .first-body {
   height: 750px;
   background: #f4f3ff;
