--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-family: "Nunito", sans-serif;
+    overflow-x: hidden;
 }
 button{
     border: none;
@@ -131,7 +132,7 @@ button{
 }
 .logo{
     margin-top: 25px;
-    margin-left: 30px;
+    margin-left: 00px;
     margin-right: 140px;
 }
 .main-nav{
@@ -191,7 +192,7 @@ margin-right: 100px;
   line-height: 70px;
   color: #2b044d;
   max-width: 520px;
-  margin-left: 200px;
+  margin-left: 170px;
     margin-top: 40px;
 }
 .subheading {
@@ -200,8 +201,8 @@ margin-right: 100px;
   line-height: 75px;
   color: #5e5e5e;
   margin-top: 0;
-  margin-left: 200px;
-    margin-bottom: 25px;
+  margin-left: 170px;
+    margin-bottom: 30px;
 }
 .first-illustration {
   position: absolute;
@@ -221,7 +222,7 @@ margin-right: 100px;
   font-weight: 300;
   font-size: 27px;
   color: #ffffff;
-  margin-left: 200px;
+  margin-left: 170px;
   cursor: pointer;
 }
 .tarif {
@@ -560,14 +561,12 @@ font-weight: 300;
   margin-left: 20px;
 }
 .adv-header {
-  font-family: Nunito;
   font-style: normal;
   font-weight: 600;
   font-size: 21px;
     margin-bottom: 15px;
 }
 .adv-text {
-  font-family: Nunito;
   font-style: normal;
   font-weight: 300;
   font-size: 17px;
@@ -1612,19 +1611,20 @@ width: 950px;
     
     }
 @media (max-width: 1100px) {
+
     .item-link{
-        font-size: 15px;
-  margin-right: 30px;
+        font-size: 17px;
+  margin-right: 27px;
     }
     .first-body {
-  height: 600px;
+  height: 560px;
   padding-top: 0px;
 }
     .main-nav{
-margin-right: 25px;
+margin-right: 20px;
 }
     .logo{
-        margin-left: 60px;
+        margin-left: 20px;
         margin-right: 50px;
         font-size: 10px;
     }
@@ -1640,23 +1640,23 @@ margin-right: 25px;
         margin-left: 150px;
     }
     .subheading{
-        margin-left: 150px;
-        font-size: 24px;
+        margin-left: 100px;
+        font-size: 25px;
         line-height: 35px;
-        margin-bottom: 40px;
+        margin-bottom: 50px;
     }
     .heading{
         line-height: 50px;
-        margin-left: 150px;
+        margin-left: 100px;
         font-size: 35px;
         max-width: 470px;
         margin-bottom: 12px;
     }
     .more-button{
-        margin-left: 150px;
-        width: 200px;
-        height: 50px;
-        font-size: 23px;
+        margin-left: 100px;
+        width: 220px;
+        height: 55px;
+        font-size: 25px;
     }
     .first-illustration{
         width: 450px;
@@ -1815,8 +1815,9 @@ margin-left: 200px;
   height: 500px;
 }
 .i-phone{
+    margin-right: 20px;
     height: 70%;
-margin-left: 100px;
+margin-left: 120px;
 }
 .i-heading {
   font-size: 40px;
@@ -1827,12 +1828,12 @@ margin-left: 100px;
   font-weight: 600;
   font-size: 25px;
   line-height: 40px;
-  max-width: 630px;
+  max-width: 530px;
     margin-bottom: 50px;
 }
 .instagram-text{
-    width: 500px;
-    margin-right: 150px;
+    width: 530px;
+    margin-right: 0px;
     height: 100%;
 }
     .subscribe-button {
@@ -1858,6 +1859,7 @@ margin-left: 100px;
     
 }
 @media (max-width: 1000px){
+
     .item-link{
         font-size: 12px;
   margin-right: 25px;
@@ -2485,11 +2487,11 @@ margin-left: 80px;
 }
 @media (max-width: 680px){
     .contact-btn{
-        width: 100px;
-        height: 30px;
-        top: 30px;
-        font-size: 15px;
-        right: 20px;
+        width: 170px;
+        height: 45px;
+        top: 130px;
+        font-size: 20px;
+        right: 30px;
     }
     .item-link{
         font-size: 10px;
@@ -2907,6 +2909,11 @@ margin-left: 30px;
     }
 }
 @media (max-width: 550px){
+    .contact-btn{
+        top: 30px;
+        right: 50px;
+        width: 150px;
+    }
     .item-link{
         font-size: 10px;
   margin-right: 25px;
