--- a/css/style.css
+++ b/css/style.css
@@ -561,11 +561,12 @@ font-weight: 300;
   margin-left: 20px;
 }
 .adv-header {
-  font-weight: bold;
+  font-weight: 600;
   font-size: 21px;
     margin-bottom: 15px;
 }
 .adv-text {
+  font-weight: 300;
   font-size: 17px;
   line-height: 25px;
 }
