--- a/css/style.css
+++ b/css/style.css
@@ -3780,6 +3780,13 @@ margin-left: 30px;
 }
 }
 @media(max-width:420px){
+    .contact-btn{
+        height: 35px;
+        font-size: 15px;
+        top: 30px;
+        right: 30px;
+        width: 120px;
+    }
      .item-link{
         font-size: 10px;
   margin-right: 15px;
@@ -3913,6 +3920,7 @@ margin-left: 10px;
 }
 }
 @media(max-width:385px){
+  
      .item-link{
         font-size: 10px;
   margin-right: 15px;
