--- a/css/style.css
+++ b/css/style.css
@@ -2134,6 +2134,9 @@ margin-left: 120px;
     }
 }
     @media (max-width: 870px){
+        *{
+            border: 1px solid red;
+        }
          .item-link{
         font-size: 13px;
   margin-right: 25px;
@@ -3894,6 +3897,9 @@ margin-left: 10px;
   line-height: 30px;
     margin-bottom: 0px;
 }
+    .time-section{
+        width: 90px;
+    }
 .i-text {
   font-weight: 600;
   font-size: 16.1px;
