--- a/css/style.css
+++ b/css/style.css
@@ -2134,9 +2134,6 @@ margin-left: 120px;
     }
 }
     @media (max-width: 870px){
-        *{
-            border: 1px solid red;
-        }
          .item-link{
         font-size: 13px;
   margin-right: 25px;
@@ -2254,7 +2251,7 @@ margin-left: 100px;
         line-height: 50px;
         margin-left: 70px;
         font-size: 50px;
-        max-width: 700px;
+        max-width: 600px;
         margin-bottom: 40px;
         margin-top: 30px;
     }
@@ -2538,8 +2535,8 @@ margin-left: 80px;
     .heading{
         line-height: 50px;
         margin-left: 70px;
-        font-size: 45px;
-        max-width: 550px;
+        font-size: 42px;
+        max-width: 500px;
         margin-bottom: 30px;
         margin-top: 30px;
     }
@@ -3790,6 +3787,7 @@ margin-left: 30px;
         right: 30px;
         width: 120px;
     }
+
      .item-link{
         font-size: 10px;
   margin-right: 15px;
@@ -3887,10 +3885,10 @@ width: 70%;}
   height: 300px;
 }
 .i-phone{
-    margin-right: 0px;
+    margin-right: 10px;
     height: 60%;
     width: 100px;
-margin-left: 10px;
+margin-left: 20px;
 }
 .i-heading {
   font-size: 23px;
@@ -3908,7 +3906,8 @@ margin-left: 10px;
     margin-bottom: 20px;
 }
 .instagram-text{
-    width: 270px;
+    width: 250px;
+    margin-right: 0px;
 }
     .subscribe-button {
   width: 150px;
@@ -3924,6 +3923,9 @@ margin-left: 10px;
   height: 85%;
   width: 80%;
 }
+    .time-section{
+        width: 30px;
+    }
 }
 @media(max-width:385px){
   
