--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 body {
   margin: 0;
   font-family: "Nunito", sans-serif;
-    overflow-x: hidden;
   max-width:100%;
 }
+body, html { overflow-x:hidden; }
 button{
     border: none;
 }
